# fast_api_zero

./: .gitignore  pyproject.toml
fast_api_zero/: app.py  database.py  security.py
migrations/: env.py  script.py.mako
migrations/versions/: 12115db534fc_create_users_table.py  6b7753828bae_exercicio_02_aula_04.py  b5545c42ccc9_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py
